php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27196 sapi apache2 uninitialized content-length value
Submitted: 2004-02-09 12:29 UTC Modified: 2004-02-09 18:22 UTC
From: pdoru at kappa dot ro Assigned:
Status: Closed Package: Apache2 related
PHP Version: Irrelevant OS: irelevant
Private report: No CVE-ID: None
 [2004-02-09 12:29 UTC] pdoru at kappa dot ro
Description:
------------
   Hi,
                                                                                                                             
   While playing with some code I noticed that apache2
sapi implementation(s) does not initialize the SG(content-length) sapi variable. Apache 1.3 sapi does! and so does ALL OTHER interfaces. A quick grep into the sources will reveal that only apache2handler and apache2filter does not initialize this. Is there a reason for this ? Or is just something that sliped ? maybe a BUG ....
                                                                                                                             
   I wrote a patch to fix this. see attached. tested and it works with no problem and correctly reports the content-length. It is very simple and straight forward. 

   This works for both php v4.3.* and v5, same code, version doesn't matter.


for patch and more info see: 
http://pdoru.from.ro/patch-php-sapi/




Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-02-09 18:22 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 19:00:01 2026 UTC