MFH: Fixed bug #27196 (Missing content_length initialization in apache 2 sapis).